<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="16dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/cardTitle"
        android:id="@+id/USAPLLifter_meetname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/USAPLLifter_date"
        android:layout_below="@id/USAPLLifter_meetname"
        android:textColor="@color/cardContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem" />
    </RelativeLayout>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/cardArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/cardHiddenLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <View
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/cardSecondaryTitle"
            android:text="@string/USAPLLifter_Placing"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/USAPLLifter_placing"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/USAPLLifter_division"
            android:layout_height="wrap_content"
            android:textColor="@color/cardSecondaryTitle"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/USAPLLifter_division"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:layout_width="0dp"
            android:textAlignment="viewEnd"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/USAPLLifter_weightclass"
            android:textColor="@color/cardSecondaryTitle"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/USAPLLifter_weightclass"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/USAPLLifter_bodyweight"
            android:layout_height="wrap_content"
            android:textColor="@color/cardSecondaryTitle"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/USAPLLifter_bodyweight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/USAPLLifter_total"
            android:layout_height="wrap_content"
            android:textColor="@color/cardSecondaryTitle"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/USAPLLifter_total"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textAlignment="viewEnd"
            android:textColor="@color/cardContent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/USAPLLifter_Wilks"
            android:textColor="@color/cardSecondaryTitle"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/USAPLLifter_wilks"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/Squat"
            android:textSize="14sp"
            android:textColor="@color/cardSecondaryTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/USAPLLifter_squat1"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/USAPLLifter_squat2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@color/cardContent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/USAPLLifter_squat3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/Bench"
            android:textSize="14sp"
            android:textColor="@color/cardSecondaryTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/USAPLLifter_bench1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="textStart"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/USAPLLifter_bench2"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/USAPLLifter_bench3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/DL"
            android:textSize="14sp"
            android:textColor="@color/cardSecondaryTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/USAPLLifter_deadlift1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/cardContent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/USAPLLifter_deadlift2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@color/cardContent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/USAPLLifter_deadlift3"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:textAlignment="textEnd"
            android:textColor="@color/cardContent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>