<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.bigpowerlifting.bigsoftware.bigpowerlifting.Rankings.USAPL.USAPLSelectionFragment"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cardTitle"
        android:textSize="24sp"
        android:text="@string/usapl_rankings"
        android:paddingBottom="16dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/peopleIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:tint="#757575"
                android:src="@drawable/ic_people_black_24dp"/>
            <LinearLayout
                android:layout_toRightOf="@id/peopleIV"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardSecondaryTitle"
                    android:textSize="14sp"
                    android:text="@string/search_by_lifter_name"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.bigpowerlifting.bigsoftware.bigpowerlifting.views.TextInputAutoCompleteTextView
                        android:id="@+id/USAPLLifterEntryET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lifterSearchAutoFillhint"/>
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ProgressBar
                        android:id="@+id/usaplRankingsNameLoadingPB"
                        android:visibility="gone"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"/>
                    <TextView
                        android:paddingTop="16dp"
                        android:id="@+id/USAPLLifterSearchBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/cardAction"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/search"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/list_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_format_list_numbered_black_24dp"
                android:tint="@color/icon_color"
                android:padding="16dp"/>
            <LinearLayout
                android:layout_toRightOf="@id/list_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_rankings_by_class"
                    android:textColor="@color/cardSecondaryTitle"
                    android:textSize="14sp"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <Spinner
                        android:id="@+id/usaplSexSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingEnd="16dp"
                        android:textColorHint="@color/divider" />
                    <Spinner
                        android:id="@+id/usaplDivisonSpinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/divider"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp">
                    <Spinner
                        android:id="@+id/usaplExerciseSpinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/divider"
                        android:paddingEnd="16dp"/>
                    <Spinner
                        android:id="@+id/usaplWeightClassSpinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/divider"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp">
                    <Spinner
                        android:id="@+id/usaplStateSpinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:textColorHint="@color/divider"
                        />
                    <Spinner
                        android:id="@+id/usaplYearSpinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:textColorHint="@color/divider"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp">
                    <!-- Blank view to occupy the rest of the layout space -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                    <Spinner
                        android:id="@+id/usaplOrderBySpinner"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/divider"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/cardAction"
                    android:textStyle="bold"
                    android:id="@+id/usaplRankingSearchBtn"
                    android:textSize="14sp"
                    android:text="@string/search"/>
            </LinearLayout>
        </RelativeLayout>
</android.support.v7.widget.CardView>
</LinearLayout>
